fix(slider): maxValue thumb positioned above minValue when overlapped in mirrored slider

--- a/src/components/calcite-slider/calcite-slider.scss
+++ b/src/components/calcite-slider/calcite-slider.scss
@@ -109,6 +109,11 @@
       display: inline-block;
       width: 1em;
     }
+    &.hyphen--mirror::before {
+      content: "\2014";
+      display: inline-block;
+      width: 1em;
+    }
   }
 
   .handle {
